--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,6 +12,7 @@
             font-family: Arial, sans-serif;
             color: #333;
         }
+
         .header {
             background-image: url('images/school-banner.jpg');
             background-size: cover;
@@ -24,12 +24,14 @@
             font-size: 2.5rem;
             font-weight: bold;
         }
+
         .form-section {
             background-color: white;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .footer {
             text-align: center;
             padding: 20px;
@@ -89,7 +91,7 @@
     </div>
 
     <script>
-        const apiBaseUrl = 'https://sf6engdm4l.execute-api.us-east-1.amazonaws.com/dev';
+        const apiBaseUrl = 'https://vipja80ms7.execute-api.us-east-1.amazonaws.com/dev';
 
         const registerForm = document.getElementById('registerForm');
         registerForm.addEventListener('submit', async (e) => {
